<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.unibi.cebitec.bibigrid</groupId>
    <artifactId>bibigrid</artifactId>
    <version>2.0</version>



    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>bibigrid-core</module>
                <module>bibigrid-aws</module>
                <module>bibigrid-azure</module>
                <module>bibigrid-googlecloud</module>
                <module>bibigrid-openstack</module>
                <module>bibigrid-main</module>
            </modules>
            <build>
                <finalName>bibigrid-${project.version}</finalName>
            </build>
        </profile>

        <profile>
            <id>openstack</id>
            <modules>
                <module>bibigrid-core</module>
                <module>bibigrid-openstack</module>
                <module>bibigrid-main</module>
            </modules>
            <build>
                <finalName>bibigrid-openstack-${project.version}</finalName>
            </build>
        </profile>

        <profile>
            <id>aws</id>
            <modules>
                <module>bibigrid-core</module>
                <module>bibigrid-aws</module>
                <module>bibigrid-main</module>
            </modules>
            <build>
                <finalName>bibigrid-aws-${project.version}</finalName>
            </build>
        </profile>

        <profile>
            <id>azure</id>
            <modules>
                <module>bibigrid-core</module>
                <module>bibigrid-azure</module>
                <module>bibigrid-main</module>
            </modules>
            <build>
                <finalName>bibigrid-azure-${project.version}</finalName>
            </build>
        </profile>

        <profile>
            <id>googlecloud</id>
            <modules>
                <module>bibigrid-core</module>
                <module>bibigrid-googlecloud</module>
                <module>bibigrid-main</module>
            </modules>
            <build>
                <finalName>bibigrid-googlecloud-${project.version}</finalName>
            </build>
        </profile>

    </profiles>

    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>

                            <transformers>

                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>de.unibi.cebitec.bibigrid.StartUp</mainClass>
                                    <manifestEntries>
                                        <Bibigrid-version>${project.version}</Bibigrid-version>
                                        <Bibigrid-build-date>${maven.build.timestamp}</Bibigrid-build-date>
                                    </manifestEntries>
                                </transformer>
                            </transformers>

                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <!--<filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*</exclude>
                                        <exclude>com/amazonaws/services/cloudformation/**/*</exclude>
                                        <exclude>com/amazonaws/services/cloudfront/**/*</exclude>
                                        <exclude>com/amazonaws/services/cloudfront_2012_03_15/**/*</exclude>
                                        <exclude>com/amazonaws/services/cloudsearch/**/*</exclude>
                                        <exclude>com/amazonaws/services/cloudwatch/**/*</exclude>
                                        <exclude>com/amazonaws/services/datapipeline/**/*</exclude>
                                        <exclude>com/amazonaws/services/directconnect/**/*</exclude>
                                        <exclude>com/amazonaws/services/dynamodb/**/*</exclude>
                                        <exclude>com/amazonaws/services/dynamodbv2/**/*</exclude>
                                        <exclude>com/amazonaws/services/elasticache/**/*</exclude>
                                        <exclude>com/amazonaws/services/elasticbeanstalk/**/*</exclude>
                                        <exclude>com/amazonaws/services/elasticloadbalancing/**/*</exclude>
                                        <exclude>com/amazonaws/services/elasticmapreduce/**/*</exclude>
                                        <exclude>com/amazonaws/services/elastictranscoder/**/*</exclude>
                                        <exclude>com/amazonaws/services/glacier/**/*</exclude>
                                        <exclude>com/amazonaws/services/identitymanagement/**/*</exclude>
                                        <exclude>com/amazonaws/services/importexport/**/*</exclude>
                                        <exclude>com/amazonaws/services/opsworks/**/*</exclude>
                                        <exclude>com/amazonaws/services/rds/**/*</exclude>
                                        <exclude>com/amazonaws/services/redshift/**/*</exclude>
                                        <exclude>com/amazonaws/services/route53/**/*</exclude>
                                        <exclude>com/amazonaws/services/securitytoken/**/*</exclude>
                                        <exclude>com/amazonaws/services/simpledb/**/*</exclude>
                                        <exclude>com/amazonaws/services/simpleemail/**/*</exclude>
                                        <exclude>com/amazonaws/services/simpleworkflow/**/*</exclude>
                                        <exclude>com/amazonaws/services/sns/**/*</exclude>
                                        <exclude>com/amazonaws/services/sqs/**/*</exclude>
                                        <exclude>com/amazonaws/services/storagegateway/**/*</exclude>
                                        <exclude>com/amazonaws/services/support/**/*</exclude>
                                        <exclude>com/amazonaws/services/s3/**/*</exclude>

                                    </excludes>
                                </filter>
                            </filters>-->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>




</project>
